tests/ui/issues/issue-3021-b.stderr
error[E0434]: can't capture dynamic environment in a fn item
  --> $DIR/issue-3021-b.rs:9:22
   |
LL |            self.v0 = k0 ^ 0x736f6d6570736575;
   |                      ^^
   |
   = help: use the `|| { ... }` closure form instead

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0434`.
